--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+* 1.4.0
+
+- Use Clojure 1.4, Lein 2, and clj-http 0.5.3.
+
 * 1.2.9
 
 - Fixed user approval URL.  Only oauth_token param is added to URL.
