--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+* 1.5.1
+
+- Add missing dependency for OpenSSL PEM reader from bouncycastle. Regression introduced in 1.5.0.
+
 * 1.5.0
 
 - Add support for extra params to `request-token` used by Etsy.
