--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+* 1.5.3 (SNAPSHOT)
+
+- Updated dependencies.
+
+* 1.5.2
+
+- Support xAuth request tokens.
+
 * 1.5.1
 
 - Add missing dependency for OpenSSL PEM reader from bouncycastle. Regression introduced in 1.5.0.
