--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+* 1.5.5
+
+- The user-approval-uri function now supports adding paramerers to the user approval URI. (danielsz)
+
 * 1.5.4
 
 - Updated Clojure, bouncycastle, and clj-http dependencies.
